<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Menu Barang">
        <menu>
            <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_baseline_storage_24"
                android:title="@string/daftar_barang"/>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="@string/tambah_barang"/>
            <item
                android:id="@+id/nav_edit"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/edit_barang"/>
            <item
                android:id="@+id/nav_del"
                android:icon="@drawable/ic_baseline_delete_24"
                android:title="@string/hapus_barang"/>
        </menu>
    </item>
    <item android:title="Aksi">
        <menu>
            <item
                android:id="@+id/nav_out"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="Logout"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_baseline_close_24"
                android:title="Keluar Aplikasi"/>
        </menu>
    </item>
</menu>